# mlops-lab1a

./: .dockerignore  Dockerfile  app.py  docker-compose.yaml  inference.py  model.joblib  pyproject.toml  training.py
config/: .env.test
tests/: test_app.py  test_settings.py
